fixed word wrap, remove .container

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,5 @@
 @import "bootstrap.min.css";
-@import "bootstrap-theme.min.css";
 body {
-  padding: 50px;
   font: 1em "Verdana", Lucida Grande, Helvetica, Arial, sans-serif;
   margin-right: auto;
   margin-left: auto;
